# anynoise

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
src/: main.cpp
src/utils/: constants.hpp
ui/: README.md
ui/MainWindow/: CMakeLists.txt  MainWindow.qml
ui/MediaToolBar/: CMakeLists.txt  MediaToolBar.qml
